src/test/ui/explicit/explicit-self-lifetime-mismatch.stderr
error[E0308]: mismatched method receiver
  --> $DIR/explicit-self-lifetime-mismatch.rs:18:12
   |
LL |            Foo<'b,'a>
   |            ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Foo<'a, 'b>`
              found type `Foo<'b, 'a>`
note: the lifetime 'b as defined on the impl at 16:9...
  --> $DIR/explicit-self-lifetime-mismatch.rs:16:9
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |         ^^
note: ...does not necessarily outlive the lifetime 'a as defined on the impl at 16:6
  --> $DIR/explicit-self-lifetime-mismatch.rs:16:6
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |      ^^

error[E0308]: mismatched method receiver
  --> $DIR/explicit-self-lifetime-mismatch.rs:18:12
   |
LL |            Foo<'b,'a>
   |            ^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Foo<'a, 'b>`
              found type `Foo<'b, 'a>`
note: the lifetime 'a as defined on the impl at 16:6...
  --> $DIR/explicit-self-lifetime-mismatch.rs:16:6
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |      ^^
note: ...does not necessarily outlive the lifetime 'b as defined on the impl at 16:9
  --> $DIR/explicit-self-lifetime-mismatch.rs:16:9
   |
LL | impl<'a,'b> Foo<'a,'b> {
   |         ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
